# HogwartsLegacyMP

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/src/: net_module.cpp
mods/PlayerDumper/Scripts/: main.lua
scripts/: deploy.sh
server/: CMakeLists.txt
server/src/: Server.cpp  Server.h  main.cpp
shared/: CMakeLists.txt  Protocol.h
tests/: CMakeLists.txt  test_client.cpp  test_protocol.cpp
